--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script defer src="./js/scripts.js"></script>
 </head>
 <body>
-    <h1>Simulador JS proyecto 1</h1>
+    <h1>Simulador JS</h1>
     <h2>Tienda de Ropa</h2>
 </body>
+
 </html>
